--- a/MyDrawindapp/app/src/main/AndroidManifest.xml
+++ b/MyDrawindapp/app/src/main/AndroidManifest.xml
@@ -10,18 +10,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyQuizApp"
+        android:theme="@style/Theme.MyDrawindapp"
         tools:targetApi="31">
         <activity
-            android:name=".ResultActivity"
-            android:exported="false" />
-        <activity
-            android:name=".QuizQuestionsActivity"
-            android:exported="false" />
-        <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:screenOrientation="portrait">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
