--- a/Permission/app/src/main/AndroidManifest.xml
+++ b/Permission/app/src/main/AndroidManifest.xml
@@ -5,9 +5,10 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -19,6 +20,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PermissionPractice"
         tools:targetApi="31">
+        <activity
+            android:name=".SnackBarActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
