--- a/MyRecipeApp/app/build.gradle
+++ b/MyRecipeApp/app/build.gradle
@@ -64,7 +64,7 @@ dependencies {
     //Json loader
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     //이미지 로딩
-    implementation 'io.coil-kt:coil:2.4.0'
+    implementation 'io.coil-kt:coil-compose:2.4.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
