--- a/MyRecipeApp/app/build.gradle
+++ b/MyRecipeApp/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -65,6 +66,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     //이미지 로딩
     implementation 'io.coil-kt:coil-compose:2.4.0'
+    //네비게이션
+    implementation 'androidx.navigation:navigation-compose:2.5.3'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
