fetch) 퍼미션 요청하고 받기

--- a/LocationApp/app/src/main/AndroidManifest.xml
+++ b/LocationApp/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <!-- 대략적 위치 - 내 폰이 연결되어 있는 통신탑이나 지금 연결되어 있는 와이파이로 위치 찾음 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <!-- 정확한 위치 - GPS나 위성 기반 위치 확인 방법 사용 꽤 높은 정확도로 기기 위치 탐색 몇 미터 안팍 -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
