--- a/ShoppingApp/app/build.gradle
+++ b/ShoppingApp/app/build.gradle
@@ -56,6 +56,20 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0'
+
+    //network call
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    //Json loader
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    implementation 'com.google.android.gms:play-services-location:21.3.0'
+    implementation 'com.google.android.gms:play-services-maps:19.0.0'
+
+    implementation 'androidx.navigation:navigation-compose:2.5.3'
+
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
