--- a/ShoppingApp/app/build.gradle
+++ b/ShoppingApp/app/build.gradle
@@ -65,7 +65,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     implementation 'com.google.android.gms:play-services-location:21.3.0'
-    implementation 'com.google.android.gms:play-services-maps:19.0.0'
+    implementation 'com.google.maps.android:maps-compose:2.15.0'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
 
     implementation 'androidx.navigation:navigation-compose:2.5.3'
 
